@@ -62,7 +62,8 @@ static int should_wait_for_program(const char cmd[]);
 static DWORD handle_process(const char cmd[], HANDLE proc, int *got_exit_code);
 static int get_subsystem(const char filename[]);
 static int get_stream_subsystem(FILE *fp);
-static FILE * read_cmd_output_internal(const char cmd[], int out_pipe[2]);
+static FILE * read_cmd_output_internal(const char cmd[], int out_pipe[2],
+		int preserve_stdin);
 static char * get_root_path(const char path[]);
 static BOOL CALLBACK close_app_enum(HWND hwnd, LPARAM lParam);
 
@@ -670,7 +671,7 @@ reopen_term_stdin(void)
 FILE *
 read_cmd_output(const char cmd[], int preserve_stdin)
 {
-	int out_fd, err_fd;
+	int in_fd, out_fd, err_fd;
 	int out_pipe[2];
 	FILE *result;
 
@@ -679,11 +680,13 @@ read_cmd_output(const char cmd[], int preserve_stdin)
 		return NULL;
 	}
 
+	in_fd = dup(_fileno(stdin));
 	out_fd = dup(_fileno(stdout));
 	err_fd = dup(_fileno(stderr));
 
-	result = read_cmd_output_internal(cmd, out_pipe);
+	result = read_cmd_output_internal(cmd, out_pipe, preserve_stdin);
 
+	_dup2(in_fd, _fileno(stdin));
 	_dup2(out_fd, _fileno(stdout));
 	_dup2(err_fd, _fileno(stderr));
 
@@ -708,10 +711,36 @@ get_installed_data_dir(void)
 }
 
 static FILE *
-read_cmd_output_internal(const char cmd[], int out_pipe[2])
+read_cmd_output_internal(const char cmd[], int out_pipe[2], int preserve_stdin)
 {
 	char *args[4];
 	int retcode;
+
+	if(!preserve_stdin)
+	{
+		HANDLE h = CreateFileA("\\\\.\\NUL", GENERIC_READ, 0, NULL, OPEN_EXISTING,
+				FILE_ATTRIBUTE_NORMAL, NULL);
+		if(h == INVALID_HANDLE_VALUE)
+		{
+			return NULL;
+		}
+
+		const int fd = _open_osfhandle((intptr_t)h, _O_RDWR);
+		if(fd == -1)
+		{
+			CloseHandle(h);
+			return NULL;
+		}
+
+		if(_dup2(fd, _fileno(stdin)) != 0)
+		{
+			return NULL;
+		}
+		if(fd != _fileno(stdin))
+		{
+			close(fd);
+		}
+	}
 
 	if(_dup2(out_pipe[1], _fileno(stdout)) != 0)
 	{
